<resources>
    <string name="app_name" translatable="false">Dynamic Island</string>
    <string name="app_name_service" translatable="false">Dynamic Island &#128072;</string>

    <string name="ENGLISH" translatable="false">English</string>
    <string name="JAPANESE" translatable="false">日本</string>
    <string name="KOREAN" translatable="false">"한국인 </string>
    <string name="FRENCH" translatable="false">Français</string>
    <string name="ITALIA" translatable="false">Italia</string>
    <string name="GERMAN" translatable="false">Deutsch</string>
    <string name="VIETNAM" translatable="false">Tiếng Việt</string>
    <string name="INDONESIA" translatable="false">Indonesia</string>
    <string name="BRAZIL" translatable="false">Brazil</string>
    <string name="TURKEY" translatable="false">Türkiye</string>
    <string name="SPAIN" translatable="false">España</string>
    <string name="INDIA" translatable="false">भारत</string>
    <string name="enable_dynamic_island">Enable Dynamic Island</string>
    <string name="show_a_dynamic">Show a dynamic island view to decorate your front camera and support you some useful functions</string>
    <string name="notch_style">Notch Styles</string>
    <string name="notch_pos">Notch Position</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="note_size">Notch Size</string>
    <string name="width">Width</string>
    <string name="reset">reset</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="configs">Configs</string>
    <string name="modules">Modules</string>
    <string name="notifications">Notifications</string>
    <string name="direct">Direct</string>
    <string name="battery_charge">Battery Charge</string>
    <string name="ear_phone">Earphones</string>
    <string name="music">Music</string>
    <string name="calls">Calls</string>
    <string name="ringing_state">Ringing State</string>
    <string name="vibration">Vibration</string>
    <string name="adjust_volume">Adjust volume</string>
    <string name="swipe_notch">Swipe the notch left to reduce the volume   - Swipe the notch right to reduce the volume</string>
    <string name="notification_animation">Notification animation</string>
    <string name="neon">Neon</string>
    <string name="animation">Animation will be applied when notified</string>
    <string name="display_mode">Display mode</string>
    <string name="always">Always</string>
    <string name="show_bubble">Show bubbles</string>
    <string name="bubble_background">Bubble background</string>
    <string name="click">Click</string>
    <string name="click_mode">Click mode</string>
    <string name="color_animation">Color animation</string>
    <string name="select_mode">Select mode click for dynamic Island</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="wanna_exit">Do you want to exit without \nsaving changes?</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="turn_on">Turn On</string>
    <string name="display_app">Display apps notifications and make actions by your notch</string>
    <string name="user_can_view">User can view and read the notification content</string>
    <string name="quick_play">Quick display</string>
    <string name="hide_on_lock">Hide on lock screen</string>
    <string name="show_action">Show actions</string>
    <string name="apps">Apps</string>
    <string name="icon">Icon</string>
    <string name="app_icon">App Icon</string>
    <string name="background_color">Background color</string>
    <string name="animation_title">Animation</string>
    <string name="shake">Shake</string>
    <string name="custom_ok">OK</string>
    <string name="show_when_having_notification">Show when having notification</string>
    <string name="call">Call</string>
    <string name="incoming_call">Incoming call</string>
    <string name="show_iphone">Show iphone style call notifications</string>
    <string name="show_default">Show default</string>
    <string name="may_not_work">May not work on some devices</string>
    <string name="call_timer">Call timer</string>
    <string name="display_timer">"Display a timer when in call "</string>
    <string name="small_notification_icon">Small notification icon</string>
    <string name="save_color">Saved colors:</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="policy">Privacy policy</string>
    <string name="download_other_app">Download Other Apps</string>
    <string name="apply">Apply</string>
    <string name="current_language">Current Language</string>
    <string name="all_language">All Languages</string>
    <string name="selected_lang">Please select language!</string>
    <string name="not_really">Not really</string>
    <string name="do_you_like_app">Do you like our application so far?</string>
    <string name="star_rate_2">Let us know and help us improve the experience for users like you</string>
    <string name="yes_i_like">Yes, I like it</string>
    <string name="internet_not_available">Internet is not available!</string>
    <string name="normal_click">Normal Click</string>
    <string name="n1"># To preview content</string>
    <string name="n2"># To hide preview content</string>
    <string name="n3"># Long press to open app</string>
    <string name="long_click">Long Click</string>
    <string name="n4"># Click to open app</string>
    <string name="bubble_dynamic">Bubble dynamic</string>
    <string name="frequency">Frequency</string>
    <string name="show_when_has_notification">Show when has notification</string>
    <string name="always_show">Always show</string>
    <string name="display_time">Display time</string>
    <string name="on_the_right">On the Right</string>
    <string name="on_the_left">On the Left</string>
    <string name="location">Location</string>
    <string name="bubble_color">Bubble color</string>
    <string name="bubble_color_border">Bubble color border</string>
    <string name="b_3_sec">3 Seconds</string>
    <string name="b_10_sec">10 Seconds</string>
    <string name="b_30_sec">30 Seconds</string>
    <string name="b_1_min">1 Minute</string>
    <string name="b_5_min">5 Minute</string>
    <string name="b_10_min">10 Minute</string>
    <string name="choose_bubble_color_background">Choose bubble color background</string>
    <string name="choose_bubble_color_border">Choose bubble color border</string>
    <string name="change_size_border">Change size border</string>
    <string name="select_all">Select All</string>
    <string name="select_app">Select Apps</string>
    <string name="reply">Reply</string>
    <string name="airpods">Airpod</string>
    <string name="percent">%%</string>
    <string name="height">Height</string>
    <string name="battery_full">Battery charged full!</string>
    <string name="battery_charging">Charging</string>
    <string name="silent_txt">Silent</string>
    <string name="vibrate">Vibrate</string>
    <string name="ring">Ring</string>
    <string name="grant_per">Grant Permission</string>
    <string name="access_per_1">Please grant <b>Accessibility</b> permission to set up and display the Dynamic Island</string>
    <string name="access_per_2">This app requires Accessibility services to set up and display the Dynamic Island, display and show more information alarm, weather, music notification view control...</string>
    <string name="access_per_3">1. Our application will not use this permission for any other use such as accumulating, disclosing information or reading the content of your screen.</string>
    <string name="access_per_4">2. This application does not store user data in this permission</string>
    <string name="authorization_instructions">Authorization Instructions</string>
    <string name="term1">I agree to the</string>
    <string name="term2">terms of service &amp; privacy policy</string>
    <string name="next">Next</string>
    <string name="let_start">Let\'s Started</string>
    <string name="intro_title_1">Dynamic Island</string>
    <string name="intro_title_2">Notification</string>
    <string name="intro_title_3">Display</string>
    <string name="intro_content_1">Experience Dynamic Island IOS 16 On Android</string>
    <string name="intro_content_2">Intuitive Notifications, Quickly Displayed On The Notch</string>
    <string name="intro_content_3">Easy Installation, Friendly Interface Button Next, Let\'s Start</string>
    <string name="agreement"><![CDATA[You must agree our term of service & privacy policy]]></string>
    <string name="dynamic_island">Dynamic Island</string>
    <string name="get_started_2">Wishing you a great application experience</string>
    <string name="get_started">Get Started</string>
    <string name="continue_custom">Continue</string>
    <string name="title_feedback">"If you have any problem, please tell us\nDo not rush to rate low on CH play.\nWe will record and update as soon as possible. \nThank You!"</string>
    <string name="no_sender_found">No provider found !</string>
    <string name="send">Send</string>
    <string name="empty_feedback">Please write your feedback !</string>
    <string name="notification_per">Please grant <b>Notification</b> permission to ensure that Dynamic Island can work always and show quick notification</string>
    <string name="pin_per">Please grant <b>Ignore Battery Optimization</b> to prevent Dynamic Island from being killed accidentally by the system</string>
    <string name="include_ads">(This action can contain ads)</string>
    <string name="exit">Exit</string>
    <string name="exit_c">Do you want to exit ?</string>
    <string name="stay_c">Stay</string>
</resources>