<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.ConfigFragment">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/text400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configs"
        android:textColor="@color/p300"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/_200sdp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.neko.hiepdph.dynamicislandvip.common.customview.itemmodule.ItemConfig1
                android:id="@+id/containerVibration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imageResConfig="@drawable/ic_vibration"
                android:layout_marginHorizontal="@dimen/_12sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:titleItemConfig="@string/vibration" />

            <com.neko.hiepdph.dynamicislandvip.common.customview.itemmodule.ItemConfig1
                android:id="@+id/containerAdjustVolume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                app:imageResConfig="@drawable/ic_adjust_volume"
                app:layout_constraintTop_toBottomOf="@id/containerVibration"
                app:titleItemConfig="@string/adjust_volume" />

            <TextView
                android:id="@+id/tvSwipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/f400"
                android:text="@string/swipe_notch"
                android:textColor="@color/n300"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/containerAdjustVolume" />

            <com.neko.hiepdph.dynamicislandvip.common.customview.itemmodule.ItemConfig2
                android:id="@+id/containerNotificationAnimation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:content="@string/neon"
                app:isColor="false"
                app:isShowContent="true"
                app:layout_constraintTop_toBottomOf="@id/tvSwipe"
                app:titleItemConfig2="@string/notification_animation" />

            <com.neko.hiepdph.dynamicislandvip.common.customview.itemmodule.ItemConfig2
                android:id="@+id/containerColor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:content="@string/neon"
                app:isShowContent="false"
                app:isColor="true"
                app:layout_constraintTop_toBottomOf="@id/containerNotificationAnimation"
                app:titleItemConfig2="@string/color_animation" />

            <TextView
                android:id="@+id/tvAnimation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:text="@string/animation"
                android:textColor="@color/n300"
                android:layout_marginTop="@dimen/_12sdp"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/containerColor" />


            <com.neko.hiepdph.dynamicislandvip.common.customview.itemmodule.ItemConfig2
                android:id="@+id/containerDisplay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="12dp"
                app:content="@string/always"
                app:isColor="false"
                app:layout_constraintTop_toBottomOf="@id/tvAnimation"
                app:titleItemConfig2="@string/display_mode"
                tools:layout_editor_absoluteX="16dp" />

            <com.neko.hiepdph.dynamicislandvip.common.customview.itemmodule.ItemConfig2
                android:id="@+id/containerShowBubble"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:isShowContent="false"
                app:isColor="false"
                app:layout_constraintTop_toBottomOf="@id/containerDisplay"
                app:titleItemConfig2="@string/show_bubble" />



            <com.neko.hiepdph.dynamicislandvip.common.customview.itemmodule.ItemConfig2
                android:id="@+id/containerClickMode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:content="@string/click"
                app:isColor="false"
                app:layout_constraintTop_toBottomOf="@id/containerShowBubble"
                app:titleItemConfig2="@string/click_mode" />

            <TextView
                android:id="@+id/tvClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/f400"
                android:text="@string/select_mode"
                android:textColor="@color/n300"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/containerClickMode" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>