<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_10sdp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/f500"
        android:text="@string/confirm_exit"
        android:textColor="#3A3A3C"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/f400"
        android:gravity="center"
        android:text="@string/wanna_exit"
        android:textColor="@color/b100"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.neko.hiepdph.dynamicislandvip.common.customview.GradientText
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_button_cancel"
        android:fontFamily="@font/f500"
        android:foreground="@drawable/fg_ripple_effect_20"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textSize="@dimen/_14sdp"
        app:colorFirst="@color/g1"
        app:colorSecond="@color/g2"
        app:layout_constraintEnd_toStartOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContent" />

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_button_gradient"
        android:fontFamily="@font/f500"
        android:foreground="@drawable/fg_ripple_effect_20"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>