<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F1F6"
    tools:context=".view.getstarted.GetStartedActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:src="@drawable/ic_getstarted"
        app:layout_constraintDimensionRatio="295:395"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/f600"
        android:gravity="center"
        android:text="@string/dynamic_island"
        android:textColor="@color/b200"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/f400"
        android:gravity="center"
        android:text="@string/get_started_2"
        android:textColor="@color/b200"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_button_gradient"
        android:fontFamily="@font/f500"
        android:foreground="@drawable/fg_ripple_effect_20"
        android:gravity="center"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/content" />

</androidx.constraintlayout.widget.ConstraintLayout>